# mvmath

./: CMakeLists.txt  README.md  meson.build  mvmath.c  mvmath.h
include/mvmath/: mvmath.h
srcs/: meson.build  mvmath.c  mvmath.h
